--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      background:radial-gradient( rgb(255, 255, 255), rgb(0, 85, 170));
     }
 
     #box {
@@ -21,6 +22,11 @@
       border-radius: 10%;
       margin-bottom: 10%;
       box-shadow: 10px 10px 2px yellowgreen, -10px -10px 2px rgba(255, 255, 0, 0.519);
+    }
+
+    #box:hover{
+      background-color: rgb(0, 0, 0);
+      color: black;
     }
 
     #box p {
@@ -51,7 +57,7 @@
 
     #coracao {
       text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.298), -4px -4px 2px rgba(0, 0, 0, 0.298);
-      font-size: 80px;
+      font-size: 65px;
       animation: coracao .5s infinite alternate 
       linear;
       display: flex;
